# agro

./: .gitignore  README.md  pyproject.toml  redeploy  saved.aider.chat.history.md  syncdocs  uv sync
.agdocs/: .gitignore
.agdocs/specs/: add-licesnse.md  aider-opts-1.md  branch-number.md  confirm-enter.md  delete-all-opt.md  delete-indicies.md  exec-n-arg.md  gitignore-startup.md  guard-kill.md  ignore-swap.md  muster-cmd.md  non-blocking.md  opts-help.md  pkg-version.md
.public-agdocs/conf/: agro.conf.bak  agro.conf.yml  agro.yml.bak
.public-agdocs/guides/: GUIDE.md
.public-agdocs/specs/: agent-var.md  agswap-dir.md  aider-opts-1.md  branch-delete.md  branch-patterns.md  changelog-1.5.md  changelog-1.6.md  changelog-1.7.md  check-taskfile.md  checkout-branch.md  claude-flags.md  clean-cmd.md  clean-help.md  clean-indices.md  cli-tests.md  clientargs-config-2.md  clientargs-config.md  commit-after-v2.md  commit-after.md  complete-init.md  complete-v1.md  complete-v2.md  config-yaml.md  default-exec-cmd.md  defaults-config-flow.md  diff-args-2.md  diff-args.md  diff-cli-tests.md  diff-cli.md  diff-cmd.md  diff-glob-passthru-v2.md  diff-glob-passthru-v3.md  diff-glob-passthru.md  do-docs-1.md  docker-testenv-setup.md  env-handling.md  exec-args.md  fade-pattern.md  fix-test.md  fix-tests.md  (+37 more)
docs/: CHANGELOG.md  agents.md  commands.md  configuration.md  contributing.md  core-concepts.md  dev-summary-v1.md  examples.md  getting-started.md  index.md  troubleshooting.md  workflows.md
docs/case-studies/: aba-1.md  (+9 more)
src/: main.py
tests/: test_cli.py  test_core.py
(+11 files in other folders)
