[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agro"
version = "0.1.0"
description = "CLI wrapper for CLI-agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv"
]

[project.scripts]
agro = "agro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
