[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agro"
version = "0.1.4"
description = "CLI wrapper for CLI-agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Will Sutton", email = "wsutton17@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML"
]

[project.scripts]
agro = "agro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
test = [
    "pytest>=8.4.1",
]

[project.urls]
Homepage = "https://github.com/sutt/agro"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
